// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tag Clickable 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-lbOyJj bASaWY"
    >
      <button
        class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR kAoSkv"
        type="button"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-hiMGwR iKIurY djVSOn"
        >
          <div
            class="sc-ivTmOn qStAn sc-cxabCf ecsbJB"
          >
            Tag: 
          </div>
          <div
            class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
          >
            Value
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Closable 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-lbOyJj bASaWY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-hiMGwR iKIurY djVSOn"
      >
        <div
          class="sc-ivTmOn qStAn sc-cxabCf ecsbJB"
        >
          Tag: 
        </div>
        <div
          class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
        >
          Value
        </div>
      </div>
      <button
        class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR bXRmqK sc-ehmTmK ekkXMn"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-xmark "
          data-icon="xmark"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-lbOyJj bASaWY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-hiMGwR iKIurY djVSOn"
      >
        <div
          class="sc-ivTmOn qStAn sc-cxabCf ecsbJB"
        >
          Tag: 
        </div>
        <div
          class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
        >
          Value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Empty 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-lbOyJj bASaWY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-hiMGwR iKIurY djVSOn"
      >
        <div
          class="sc-ivTmOn WZUmp sc-cxabCf ecsbJB"
        >
          no value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Multiple Values 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-lbOyJj bASaWY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-hiMGwR iKIurY djVSOn"
      >
        <div
          class="sc-ivTmOn qStAn sc-cxabCf ecsbJB"
        >
          Tag1 contains 
        </div>
        <div
          class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
        >
          value1
        </div>
        <div
          class="sc-ivTmOn dTYjnd sc-cxabCf ecsbJB"
        >
            or  
        </div>
        <div
          class="sc-ivTmOn qStAn sc-cxabCf ecsbJB"
        >
          Tag2 contains 
        </div>
        <div
          class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
        >
          value2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Only Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-lbOyJj bASaWY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-hiMGwR iKIurY djVSOn"
      >
        <div
          class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
        >
          Name
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Only Value 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-lbOyJj bASaWY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-hiMGwR iKIurY djVSOn"
      >
        <div
          class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
        >
          Value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Overflow 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-lbOyJj bASaWY"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-hiMGwR iKIurY djVSOn"
      >
        <div
          class="sc-ivTmOn qStAn sc-cxabCf ecsbJB"
        >
          Tag1 contains 
        </div>
        <div
          class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
        >
          value1
        </div>
        <div
          class="sc-ivTmOn qStAn sc-cxabCf ecsbJB"
        >
          ... and 3 more
        </div>
      </div>
    </div>
  </div>
</div>
`;
